Css fixes for iphone/safari compatibility. font color, weird wrapping of tab text, and fixing the scrollable area right hand margin on all OSes

--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -67,6 +67,8 @@ button {
   width: 100%;
   background-color: $teal;
   color: $white;
+  // required for older safari
+  -webkit-text-fill-color: $white;
 
   @media (min-width: 800px) {
     width: 200px;
