--- a/src/styles/pageStructure.scss
+++ b/src/styles/pageStructure.scss
@@ -1,5 +1,6 @@
 
 *, *:before, *:after {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -24,6 +25,7 @@ $header-and-footer-height: calc(#{$header-height} + #{$footer-height});
   background-color: $teal;
   height: $header-height;
   width: 100%;
+  -webkit-clip-path: polygon(0% 0%,100% 0%,100% 100%,75% 85%,0% 100%);
   clip-path: polygon(0% 0%,100% 0%,100% 100%,75% 85%,0% 100%);
 }
 
@@ -90,20 +92,21 @@ h2.title {
   transform: translateX(0);
 }
 
-.tab {
+.tab-wrapper {
   display: flex;
   overflow: hidden;
   margin: 20px -16px;
   padding: 0 0 10px 0;
 }
-.tab-right {
+.tab-wrapper.tab-right {
   justify-content: flex-end;
 }
-.tab-left {
+.tab-wrapper.tab-left {
   justify-content: flex-start;
 }
 
 .tab-link {
+  white-space: nowrap;
   margin: 0 -10px;
   border-radius:5px;
   padding: 10px 20px;
