--- a/src/styles/swatchCards.scss
+++ b/src/styles/swatchCards.scss
@@ -17,19 +17,24 @@
   visibility: hidden;
 }
 
-.formTab .scrollable-area {
-  display: flex;
-}
-
-.resultsTab .scrollable-area {
+.scrollable-area {
   position: relative;
 }
 
+.swatch-card::after {
+  content: '';
+  position: absolute;
+  left: 100%;
+  width: 16px;
+  height: 10px;
+  margin: 0;
+}
+
 .swatch-card {
-  display: inline-block;
   background-color: $white;
   box-shadow: 3px 3px 6px transparentize($color: $black, $amount: 0.25);
 
+  position: relative;
   width: fit-content;
 
   //grid layout
@@ -40,7 +45,6 @@
 .resultsTab .swatch-card {
   position: absolute;
 }
-
 
 .signature-area {
   text-align: center;
